--- a/Kiznic/res/layout/activity_main.xml
+++ b/Kiznic/res/layout/activity_main.xml
@@ -120,7 +120,8 @@
          <ImageView 
              android:id="@+id/tutorial_main_image"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"/>
+             android:layout_height="match_parent"
+             android:scaleType="fitXY"/>
          
      </LinearLayout>
      
